# crew_agent

./: README.md  pyproject.toml
src/basic_agent/: crew.py  main.py
src/basic_agent/config/: tasks.yaml
