[project]
name = "basic_agent"
version = "0.1.0"
description = "basic_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
basic_agent = "basic_agent.main:run"
run_crew = "basic_agent.main:run"
train = "basic_agent.main:train"
replay = "basic_agent.main:replay"
test = "basic_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
